traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Missing closing brace `}' assumed here
override def run() {
^Snake:1: error: expected start of definition
override def run() {
         ^Snake:10: error: expected class or object definition
def final():Boolean = {
^Snake:17: error: expected class or object definition
def murNord():Boolean={
^